@@ -76,7 +76,7 @@ public final class ReflectionUtil {
 	 * @throws  IllegalArgumentException when a parameter has a syntax error
 	 *        or when a needed method has not be found. 
 	 */
-	public final static void populate( Object object, Variable parameter, File baseDir ) {
+	public static void populate( Object object, Variable parameter, File baseDir ) {
 		String methodName = parameter.getName();
 		if (methodName == null) {
 			throw new IllegalArgumentException( "The parameter does not contain a name." );
@@ -102,7 +102,7 @@ public final class ReflectionUtil {
 			} catch (NoSuchMethodException e2) {
 				try {
 					method = objectClass.getMethod(methodName, new Class[]{ Boolean.TYPE } );
-					argument = new Boolean( CastUtil.getBoolean(value) );
+					argument = Boolean.valueOf( CastUtil.getBoolean(value) );
 				} catch (NoSuchMethodException e3) {
 					throw new IllegalArgumentException( "Unable to retrieve method " + methodName + ": " + e3.toString() );
 				}				
@@ -143,7 +143,7 @@ public final class ReflectionUtil {
 	 * @throws  IllegalArgumentException when a parameter has a syntax error
 	 *        or when a needed method has not be found. 
 	 */
-	public final static void populate( Object object, Variable[] parameters, File baseDir ) {
+	public static void populate( Object object, Variable[] parameters, File baseDir ) {
 		Class objectClass = object.getClass();
 		try {
 			// first check whether the object in question has implmented the setParameters( Variable[] parameters, File baseDir ) method.
@@ -242,7 +242,7 @@ public final class ReflectionUtil {
 		if (paramType == String.class) {
 			method.invoke(object, new Object[]{ value } );
 		} else if (paramType == Boolean.TYPE ) {
-			Boolean argument = new Boolean( CastUtil.getBoolean(value) );
+			Boolean argument = Boolean.valueOf( CastUtil.getBoolean(value) );
 			method.invoke(object, new Object[]{ argument } );
 		} else {
 			File file = new File( value );
